--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -25,3 +25,9 @@ a:hover{
 h2{
     width: 400px;
 }
+
+input[type=text], input[type=tel], select{
+    width: 250px;
+    height: 30px;
+    margin: 10px;
+}
