The client window has been completed and all bugs have been fixed

--- a/public/css/newappform.css
+++ b/public/css/newappform.css
@@ -4,3 +4,11 @@ input[type=text], input[type=tel], select{
     height: 30px;
     margin: 10px;
 }
+
+input[type=checkbox]{
+    margin-right: 5px;
+}
+
+.pservice{
+    cursor:pointer;
+}
